# foam_gen

./: README.md  calcs.py  cmnd.py  foam_gen.py  main.py  make_foam.py  output.py  pyproject.toml  requirements.txt  setup.py
Analysis/: Generate_Foam_Batches.py  ML_Density_Adjustment.py  Sort_radii.py  batch_generators.py  updated_radii.py
Data/: density_adjustments.txt  linreg_pipeline.pkl
Scratches/: batch_generators.py  test1.py
System/: calcs.py  distributions.py  make_foam.py  output.py  system.py
Visualize/: GUI.py  GUI2.py  mpl_visualize.py
