[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "foam_gen"
version = "0.1.0"
description = "An interactive simulated foam generator for creating 3-dimensional random ensembles of spheres"
readme = "README.md"
authors = [
    {name = "John Ericson", email = "jackericson98@gmail.com"}
]
keywords = ["foam", "simulation", "3d", "spheres", "physics", "visualization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "matplotlib>=3.5.0",
    "numba>=0.56.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "tqdm>=4.62.0",
]

[project.urls]
Homepage = "https://github.com/jackericson98/foam_gen"
Repository = "https://github.com/jackericson98/foam_gen"
Documentation = "https://github.com/jackericson98/foam_gen#readme"
"Bug Tracker" = "https://github.com/jackericson98/foam_gen/issues"

[project.scripts]
foam_gen = "foam_gen.__main__:main" 